--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -19,7 +19,7 @@
                         </div>
                         <% } else { %>
                         <div class="welcome-btn">
-                            <a href="#" class="gradient-btn v2 mr-20"><i class="fa fa-download"></i> &nbsp; WHITEPAPER</a>
+                            <a href="https://wbankwallet.com/WBank-Wallet-Business-Proposal.pdf" class="gradient-btn v2 mr-20"><i class="fa fa-download"></i> &nbsp; WHITEPAPER</a>
                             <a href="/user/swap" class="gradient-btn v2 mr-20"><i class="fa fa-exchange"></i> &nbsp; EXCHANGE</a>
                         </div>
                         <% } %>
@@ -212,6 +212,32 @@
         <!---distibution area start-->
         <div class="distibution wow fadeInUp" id="token">
             <div class="container">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <div class="heading">
+                            <h1>World Bank Ecosystem</h1>
+                        </div>
+                        <div class="space-60"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    
+                    <div class="col-6 text-right">
+                        <div class="distibution-svg distibution-svg-1">
+                            <img src="assets/img/token-top.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="distibution-d item-1">
+                            <ul>
+                                <li class="distibution-list-1">wbank.exchange</li>
+                                <li class="distibution-list-2"><span>Wbankwallet.com</li>
+                                <li class="distibution-list-3"><span>Wbank.win</li>
+                                <li class="distibution-list-4"><span>Worldbankwallet.org</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
                 <div class="space-90"></div>
                 <div class="row">
                     <div class="col-12 text-center">
@@ -258,7 +284,7 @@
                         <div class="space-20"></div>
                     </div>
                     <div class="space-30"></div>
-                    <a href="https://theworldbank.group/WbankApp.apk" class="gradient-btn apps-btn"> <i class="zmdi zmdi-google-play"></i>Google Playstore</a>
+                    <a href="https://play.google.com/store/apps/details?id=com.wbankapp" class="gradient-btn apps-btn"> <i class="zmdi zmdi-google-play"></i>Google Playstore</a>
 
                     <a href="itms-services://?action=download-
                     manifest&url=https://theworldbank.group/app.plist" class="gradient-btn apps-btn apps-btn-2"> <i class="zmdi zmdi-apple"></i>Apple Appstore</a>
@@ -295,16 +321,6 @@
                         <a class="linkedin" href="https://t.me/WbTokenOfficial"><i class="fa fa-telegram"></i></a>
                     </div>
                  </div>
-                 <div class="col-6 col-lg">
-                    <div class="single-community mid-social">
-                        <a class="linkedin" href="https://t.me/WbTokenOfficial"><i class="fa fa-telegram"></i></a>
-                    </div>
-                 </div>
-                 <div class="col-6 col-lg">
-                    <div class="single-community mid-social">
-                        <a class="linkedin" href="https://t.me/WbTokenOfficial"><i class="fa fa-telegram"></i></a>
-                    </div>
-                 </div>
                 <div class="col-6 col-lg">
                     <div class="single-community mid-social">
                         <a class="youtube" href="https://www.facebook.com/worldbankwallet/"><i class="fa fa-youtube"></i></a>
@@ -316,6 +332,34 @@
                     </div>
                 </div>
             </div>
+            <div class="space-90"></div>
+            <h1 class="text-center">Group</h1>
+            <div class="row">
+                <ul class="group-more-social text-center col-12">
+                    <div class="space-50"></div>
+                    <li><a href="https://t.me/WbTokenOfficial"><h3>Global</h3></a></li>
+                    <div class="space-10"></div>
+                    <li><a href="http://t.me/WBTokenOfficialGroup"><h3>WB Group Global</h3></a></li>
+                    <div class="space-10"></div>
+                    <li><a href="https://t.me/WB_wallet_VN"><h3>Channel VietNam</h3></a></li>
+                    <div class="space-10"></div>
+                    <li><a href="https://t.me/wbankwallet247"><h3>Wbank Group VietNam update New</h3></a></li>
+                    <div class="space-10"></div>
+                    <li><a href="http://t.me/wbtphilipines"><h3>Philippines</h3></a></li>
+                    <div class="space-10"></div>
+                    <li><a href="http://t.me/WBT_Indo"><h3>Indonesia</h3></a></li>
+                    <div class="space-10"></div>
+                    <li><a href="http://t.me/WBT_Pakistan"><h3>Pakistan</h3></a></li>
+                    <div class="space-10"></div>
+                    <li><a href="http://t.me/WbTokenKorea"><h3>Korea</h3></a></li>
+                    <div class="space-10"></div>
+                    <li><a href="http://t.me/WbTokenChina"><h3>Chinese</h3></a></li>
+                    <div class="space-10"></div>
+                    <li><a href="http://t.me/wbankwallet"><h3>Wbank Trade</h6></a></li>
+                        <div class="space-10"></div>
+                </ul>
+            </div>
+            
         </div>
     </div>
     <!--community area end-->
