--- a/src/views/user/dashboard.ejs
+++ b/src/views/user/dashboard.ejs
@@ -20,7 +20,7 @@
                         <div class="space-10"></div>
                         <p><span id="btcPrice" style="color: rgb(10, 233, 10); font-weight: bold;"></span> $</p>
                     </div>
-                </div>>
+                </div>
                 <div class="col-lg-5 col-sm-12">
                     <div class="assets-box text-center">
                         <h6>WBank Token</h6>
@@ -171,7 +171,7 @@
                 <label class="col-2" for="withdrawAmount">Amount: </label>
                 <input id="btc-amount" class="withdrawAmount col-9 p-2" type="number" min="0" name="withdrawAmount" placeholder="Enter Amount">
                 <div class="space-10"></div>
-                <input id="withdraw-btc" data-coin="btc" class="btn btn-outline-danger" type="button" value="Submit">
+                <input id="withdraw-btc" data-dissmiss="modal" data-coin="btc" class="btn btn-outline-danger" type="button" value="Submit">
                 <div class="space-10"></div>
               </form>
             </div>
@@ -204,7 +204,7 @@
                 <input id="wbt-amount" class="withdrawAmount col-9 p-2" type="number" name="withdrawAmount" placeholder="Enter Amount">
                 <div class="space-10"></div>
 
-                <input id="withdraw-wbt" data-coin="wbt" class="btn btn-outline-danger" type="button" value="Submit">
+                <input id="withdraw-wbt" data-dismiss="modal" data-coin="wbt" class="btn btn-outline-danger" type="button" value="Submit">
                 <div class="space-10"></div>
               </form>
             </div>
