--- a/src/views/user/swap.ejs
+++ b/src/views/user/swap.ejs
@@ -27,7 +27,8 @@
                         </div>
                         <div class="space-30"></div>
                         <div>
-                            <div class="balance-assets">0.00 BTC</div>
+                            <div class="balance-assets"><span id="balance-swap-btc" style="font-weight: bold; color:white"><%= amountBtc %></span id="balance-swap-wbt"> BTC</div>
+                            <div class="balance-assets"><span id="balance-swap-wbt" style="font-weight: bold; color:white"><%= amountWbt %></span id="balance-swap-wbt"> WBT</div>
                         </div>
                         <div class="space-30"></div>
                         <div class="col-12 text-center">
@@ -70,24 +71,6 @@
                         <hr class="bg-white">
                         <div class="checkin">
                             <div class="name-bill">Receive</div>
-                            <div class="value-bill">
-                                <div>$0.00</div>
-                                <div>0.00 BTC</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="assets-box text-center">
-                        <div class="">
-                            <div class="">Price</div>
-                            <div class="space-10"></div>
-                            <div class="">
-                                <span>1 BTC</span> = <span>1 ETH</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="assets-box text-center">
-                        <div class="checkin">
-                            <div class="name-bill font-bold">Exchange</div>
                             <div class="value-bill">
                                 <div>$0.00</div>
                                 <div>0.00 BTC</div>
