--- a/src/views/layout/footer.ejs
+++ b/src/views/layout/footer.ejs
@@ -1,10 +1,9 @@
  <div class="social-aside">
      <ul>
-         <a class="social-aside-unit" href=""><li><i class="fa fa-facebook"></i></li></a>
-         <a class="social-aside-unit" href=""><li><i class="fa fa-youtube text-danger"></i></li></a>
-         <a class="social-aside-unit" href=""><li><i class="fa fa-twitter text-primary"></i></li></a>
-         <a class="social-aside-unit" href=""><li><i class="fa fa-reddit text-dark"></i></li></a>
-         <a class="social-aside-unit" href=""><li><i class="fa fa-telegram"></i></li></a>
+         <a class="social-aside-unit" href="https://www.facebook.com/worldbankwallet/"><li><i class="fa fa-facebook"></i></li></a>
+         <a class="social-aside-unit" href="https://www.youtube.com/channel/UCmmgIIo2xiYWfOcq0hwDkCQ"><li><i class="fa fa-youtube text-danger"></i></li></a>
+         <a class="social-aside-unit" href="https://twitter.com/WbankWallet99"><li><i class="fa fa-twitter text-primary"></i></li></a>
+         <a class="social-aside-unit" href="https://t.me/WbTokenOfficial"><li><i class="fa fa-telegram"></i></li></a>
      </ul>
  </div>
  <!--footer area start-->
