--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -323,12 +323,12 @@
                  </div>
                 <div class="col-6 col-lg">
                     <div class="single-community mid-social">
-                        <a class="youtube" href="https://www.facebook.com/worldbankwallet/"><i class="fa fa-youtube"></i></a>
+                        <a class="youtube" href="https://www.youtube.com/channel/UCmmgIIo2xiYWfOcq0hwDkCQ"><i class="fa fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="col-6 col-lg">
                     <div class="single-community mid-social">
-                        <a class="twitter" href="https://www.facebook.com/worldbankwallet/"><i class="fa fa-twitter"></i></a>
+                        <a class="twitter" href="https://twitter.com/WbankWallet99"><i class="fa fa-twitter"></i></a>
                     </div>
                 </div>
             </div>
