--- a/src/views/user/profile.ejs
+++ b/src/views/user/profile.ejs
@@ -35,7 +35,7 @@
                                     <% if(!user.phone){ %>
                                     <button id="add-phone" class="btn btn-outline-success" data-toggle="modal" data-target="#modal-addPhone">Add Phone</button>
                                     <% }else{ %>
-                                        0<span id="phone-user"><%= user.phone %></span>
+                                        <span id="phone-user"><%= user.phone %></span>
                                     <% } %>
                                 </li>
                                 <div class="space-10"></div>
@@ -147,7 +147,7 @@
             </div>
             <div class="modal-body">
               <form >
-                  <input id="add-phone-content" class="col-12" type="text" name="phone" placeHolder="Enter Your Phone">
+                  <input id="add-phone-content" class="col-12" type="number " name="phone" placeHolder="Enter Your Phone">
                   <div class="space-10"></div>
                   <input id="btn-add-phone" data-dismiss="modal" class="btn btn-success" type="button" value="Submit">
               </form>
