--- a/src/views/user/profile.ejs
+++ b/src/views/user/profile.ejs
@@ -115,7 +115,7 @@
                                 <td class="value-deposit-detail">To</td>
                                 <td class="value-deposit-detail">Rate</td>
                                 <td class="value-deposit-detail">Amount</td>
-                                <td class="value-deposit-detail">TimeStamp</td>
+                                <td class="value-deposit-detail">Timestamp</td>
                             </tr>
                             </tr>
                             <% swap.forEach((item)=>{%>
