--- a/src/views/user/profile.ejs
+++ b/src/views/user/profile.ejs
@@ -147,7 +147,7 @@
             </div>
             <div class="modal-body">
               <form >
-                  <input id="add-phone-content" class="col-12" type="number " name="phone" placeHolder="Enter Your Phone">
+                  <input id="add-phone-content" class="col-12" type="text" name="phone" placeHolder="Enter Your Phone">
                   <div class="space-10"></div>
                   <input id="btn-add-phone" data-dismiss="modal" class="btn btn-success" type="button" value="Submit">
               </form>
