--- a/src/views/admin/profile.ejs
+++ b/src/views/admin/profile.ejs
@@ -18,7 +18,7 @@
                             <div class="space-20"></div>
                             <strong style="font-size: 18px;">Total Users</strong>
                         </div>
-                        <h1><%= adminTotal.totaluser %></h1>
+                        <h1><%= totaluser %></h1>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-12">
@@ -27,7 +27,7 @@
                             <div class="space-20"></div>
                             <strong style="font-size: 18px;">WBT Total Balance</strong>
                         </div>
-                        <h1><%= adminTotal.totalwbt %></h1>
+                        <h1><%= totalwbt %></h1>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-12">
@@ -36,7 +36,7 @@
                             <div class="space-20"></div>
                             <strong style="font-size: 18px;">BTC Total Balance</strong>
                         </div>
-                        <h1><%= adminTotal.totalbtc %></h1>
+                        <h1><%= totalbtc %></h1>
                     </div>
                 </div>
             </div>
