--- a/src/views/review.ejs
+++ b/src/views/review.ejs
@@ -56,8 +56,7 @@
             <div class="row">
                 <div class="col-6 col-lg">
                     <div class="single-community mid-social">
-                        <a class="google-plus" href="https://www.youtube.com/channel/UCwMHCdofMpZuUcCr1SB_47g?view_
-                        as=subscriber"><i class="fa fa-facebook"></i></a>
+                        <a class="google-plus" href="https://www.facebook.com/worldbankwallet/"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
                 <div class="col-6 col-lg">
@@ -67,18 +66,12 @@
                 </div>
                 <div class="col-6 col-lg">
                     <div class="single-community mid-social">
-                        <a class="behance" href="https://www.reddit.com/r/WB_Wallet/"><i class="fa fa-reddit"></i></a>
+                        <a class="youtube" href="https://www.youtube.com/channel/UCmmgIIo2xiYWfOcq0hwDkCQ"><i class="fa fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="col-6 col-lg">
                     <div class="single-community mid-social">
-                        <a class="youtube" href="https://www.youtube.com/channel/UCwMHCdofMpZuUcCr1SB_47g?view_
-                        as=subscriber"><i class="fa fa-youtube"></i></a>
-                    </div>
-                </div>
-                <div class="col-6 col-lg">
-                    <div class="single-community mid-social">
-                        <a class="twitter" href="https://twitter.com/Worldbankwallet"><i class="fa fa-twitter"></i></a>
+                        <a class="twitter" href="https://twitter.com/WbankWallet99"><i class="fa fa-twitter"></i></a>
                     </div>
                 </div>
             </div>
@@ -130,5 +123,12 @@
         </div>
     </div>
     <!--single blog area end-->
-
+    <div class="social-aside">
+        <ul>
+            <a class="social-aside-unit" href="https://www.facebook.com/worldbankwallet/"><li><i class="fa fa-facebook"></i></li></a>
+            <a class="social-aside-unit" href="https://www.youtube.com/channel/UCmmgIIo2xiYWfOcq0hwDkCQ"><li><i class="fa fa-youtube text-danger"></i></li></a>
+            <a class="social-aside-unit" href="https://twitter.com/WbankWallet99"><li><i class="fa fa-twitter text-primary"></i></li></a>
+            <a class="social-aside-unit" href="https://t.me/WbTokenOfficial"><li><i class="fa fa-telegram"></i></li></a>
+        </ul>
+    </div>
 <%- include("./layout/footer"); -%>
