--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -363,5 +363,12 @@
         </div>
     </div>
     <!--community area end-->
-
+    <div class="social-aside">
+        <ul>
+            <a class="social-aside-unit" href="https://www.facebook.com/worldbankwallet/"><li><i class="fa fa-facebook"></i></li></a>
+            <a class="social-aside-unit" href="https://www.youtube.com/channel/UCmmgIIo2xiYWfOcq0hwDkCQ"><li><i class="fa fa-youtube text-danger"></i></li></a>
+            <a class="social-aside-unit" href="https://twitter.com/WbankWallet99"><li><i class="fa fa-twitter text-primary"></i></li></a>
+            <a class="social-aside-unit" href="https://t.me/WbTokenOfficial"><li><i class="fa fa-telegram"></i></li></a>
+        </ul>
+    </div>
 <%- include("./layout/footer"); -%> 
